Mar 13 2004  devel  Updated readme, added client column lists
Mar 12 2004  devel  Changed sound exec to dup2 /dev/null instead of closing
                     stdout and stderr, should prevent sox being mad about
                     not having output paths
Mar 11 2004  devel  Made blanking SSID during entering monitor mode a nonfatal
                     condition.  Should alleviate difficulties with some
                     drivers (prism54, maybe cisco)
                    Added large-file checking and defines, should overcome the
                     2GB file size limit on systems that support it
                    Changed versioning (again) - YYYY-MM-Release.
Mar 10 2004  devel  Fixed a segfault in the client command protocol
                    Improved error reporting for madwifi monitor mode
Mar 08 2004  devel  Fixed a segfault with a 0-length macaddr struct (exposed
                     by an empty manuf map file).  No security implications.
                    Changed ifdef block in pcapsource, added ifndef to 
                     compensate for pcap on some platforms
Mar 07 2004  devel  Fixed another bsd compile error
                    Revamped error reporting to print errors to console even
                     when silent if there are no clients.  Should force showing
                     fast-startup errors that got hidden before.
Mar 04 2004  devel  Fixed undefined function error on BSDs introduced from
                     other error catching
                    Fixed stupid config test copy and paste bug for GMP
                    Reordered orinoco monitor commands
                    More major gpsmap updates
                     Total rewrite of interpolation.  Previous code was 
                      terminally broken.  New interpolation algos are MUCH
                      more adept at handling "generic wardriving" data.
                     Moved interpolation to only process "relevant center"