@@ -1,4 +1,5 @@
 Mar 13 2004  devel  Updated readme, added client column lists
+                    Added unmonitor support for madwifi
 Mar 12 2004  devel  Changed sound exec to dup2 /dev/null instead of closing
                      stdout and stderr, should prevent sox being mad about
                      not having output paths
